[tool.poetry]
name = "active-learning"
version = "0.1.0"
description = ""
authors = ["Lyie123 <moch.rene@googlemail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.2.2"
scikit-learn = "^1.1.3"

[tool.poetry.dev-dependencies]
ipykernel = "^6.17.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
